--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,374 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+//customize bootstrap
+$primary: #a68d61;
+
+//button
+$btn-border-radius: 0px;
+$btn-padding-x: 32px;
+$btn-padding-y: 18px;
+
+//fonts
+$title-font: "utopia-std", serif;
+
+@import "node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/mixins";
+
+// common fonts
+@import url("https://fonts.googleapis.com/css2?family=Alike&family=Inter:wght@100;300;400;500;700&display=swap");
+@import url("https://use.typekit.net/bfw8lda.css");
+@import "node_modules/locomotive-scroll/dist/locomotive-scroll.css";
+
+h1 {
+  // desktop & Tablet
+  font-size: 64px;
+  font-family: $title-font;
+  font-weight: 400;
+  line-height: 80px;
+  word-wrap: break-word;
+  margin-bottom: 0;
+  @include media-breakpoint-down(lg) {
+    //mobile
+    font-size: 54px;
+    line-height: 68px;
+  }
+  @include media-breakpoint-down(md) {
+    //mobile
+    font-size: 32px;
+    line-height: 48px;
+  }
+}
+h2 {
+  // desktop & Tablet
+  font-size: 48px;
+  font-family: $title-font;
+  font-weight: 400;
+  line-height: 64px;
+  word-wrap: break-word;
+  margin-bottom: 0;
+  @include media-breakpoint-down(md) {
+    //mobile
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+h3 {
+  // desktop & Tablet
+  font-size: 24px;
+  font-family: $title-font;
+  font-weight: 400;
+  line-height: 32px;
+  word-wrap: break-word;
+  margin-bottom: 0;
+  @include media-breakpoint-down(md) {
+    //mobile
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+p {
+  // desktop & Tablet & mobile
+  font-size: 16px;
+  font-family: Inter;
+  font-weight: 400;
+  line-height: 32px;
+  word-wrap: break-word;
+  margin-bottom: 0;
+}
+button {
+  // desktop & Tablet & mobile
+  font-size: 16px;
+  font-family: Inter;
+  font-weight: 500;
+  line-height: 32px;
+  word-wrap: break-word;
+}
+.sm-body-text {
+  font-size: 12px;
+  font-family: Inter;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 32px;
+  word-wrap: break-word;
+}
+
+.md-body-text {
+  font-size: 14px;
+  font-family: $title-font;
+  font-weight: 400;
+  line-height: 32px;
+  word-wrap: break-word;
+}
+.nav-menu-fonts {
+  color: #27463e;
+  font-size: 16px;
+  font-family: Alike;
+  font-weight: 400;
+  line-height: 32px;
+  word-wrap: break-word;
+  cursor: pointer;
+}
+
+// layout
+.header {
+  overflow: hidden;
+  margin: auto;
+  max-width: 1500px;
+  max-height: 900px;
+  margin-top: 32px;
+  @include media-breakpoint-down(lg) {
+    margin-top: 40px;
+    padding: 0px 20px;
+  }
+  @include media-breakpoint-down(md) {
+    margin-top: 24px;
+    padding: 0px 4px;
+  }
+  &-img{
+    @include media-breakpoint-down(md){
+      width: 360px;
+      height: 237px;
+    }
+  }
+}
+
+.booking-btn {
+  padding: 11px;
+  border: 1px #e6a44e solid;
+  border-radius: 0;
+  background: #fff;
+
+  color: #1b1b1c;
+  font-size: 16px;
+  font-family: Inter;
+  font-weight: 500;
+  line-height: 32px;
+  word-wrap: break-word;
+}
+
+.sub-section {
+  margin: auto;
+  overflow: hidden;
+  max-width: 1200px;
+  @include media-breakpoint-down(lg) {
+    padding: 0px 20px;
+  }
+  @include media-breakpoint-down(md) {
+    padding: 0px 4px;
+  }
+}
+.vertical-space-lg {
+  margin-top: 180px;
+  @include media-breakpoint-down(lg) {
+    margin-top: 80px;
+  }
+  @include media-breakpoint-down(md) {
+    margin-top: 64px;
+  }
+}
+.vertical-space-md {
+  margin-top: 164px;
+  @include media-breakpoint-down(lg) {
+    margin-top: 96px;
+  }
+}
+.vertical-space-sm {
+  margin-top: 120px;
+  @include media-breakpoint-down(lg) {
+    margin-top: 80px;
+  }
+  @include media-breakpoint-down(md) {
+    margin-top: 32px;
+  }
+}
+
+img {
+  width: 100%;
+  height: 100% !important;
+}
+
+.review-section {
+  overflow: visible !important;
+}
+
+#carouselExampleIndicators {
+  padding: 50px 80px;
+  height: 430px;
+  background-color: #fbf9f5;
+  @include media-breakpoint-down(lg) {
+    padding: 50px 60px;
+  }
+  @include media-breakpoint-down(md) {
+    padding: 24px 24px 100px;
+    height: 400px;
+  }
+}
+
+.carousel-indicators {
+  margin-bottom: 3rem !important;
+  @include media-breakpoint-down(md) {
+    bottom: -10px;
+  }
+  button {
+    width: 4px !important;
+    height: 4px !important;
+    border: 1px #694327 solid !important;
+    background: #fff !important;
+    opacity: 1 !important;
+    align-self: center;
+  }
+  .active {
+    background: #694327 !important;
+    width: 8px !important;
+    height: 8px !important;
+  }
+}
+
+.carousel-control-prev {
+  left: 40% !important;
+  @include media-breakpoint-down(lg) {
+    left: 35% !important;
+  }
+  @include media-breakpoint-down(md) {
+    left: 25% !important;
+  }
+}
+.carousel-control-next {
+  right: 40% !important;
+  @include media-breakpoint-down(lg) {
+    right: 35% !important;
+  }
+  @include media-breakpoint-down(md) {
+    right: 25% !important;
+  }
+}
+.carousel-control-next,
+.carousel-control-prev {
+  height: 3rem !important;
+  top: 78.2% !important;
+  width: 80px !important;
+  height: 80px !important;
+  @include media-breakpoint-down(md) {
+    top: 79% !important;
+  }
+}
+
+.quote-icon {
+  position: absolute;
+  top: -1rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.carousel-item {
+  .item {
+    .title {
+      h2 {
+        text-align: center !important;
+        color: #1b1b1c;
+      }
+    }
+    .quote-section {
+      margin-top: 45px;
+      @include media-breakpoint-down(md) {
+        flex-direction: column;
+      }
+      .quote {
+        font-style: italic;
+        color: #042a2b;
+      }
+    }
+  }
+}
+
+.btn-activity {
+  width: 337px;
+  border: 1px #e6a44e solid;
+  padding: 18px 32px;
+
+  // View All Activities
+  color: #1b1b1c;
+  font-size: 16px;
+  font-family: Inter;
+  font-weight: 500;
+  line-height: 32px;
+  word-wrap: break-word;
+  &:active,
+  &:hover{
+    border: 1px #e6a44e solid;
+  }
+}
+
+
+#img-1 {
+  position: relative;
+  width: 34rem;
+  @include media-breakpoint-down(lg) {
+    width: 93vw;
+  }
+  .cover {
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #a68d61;
+    z-index: 999999;
+  }
+}
+
+#img-2 {
+  position: relative;
+  width: 30rem;
+  @include media-breakpoint-down(lg) {
+    width: 93vw;
+  }
+  .cover {
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #a68d61;
+    z-index: 999999;
+  }
+}
+
+#img-3 {
+  position: relative;
+  width: 34rem;
+  @include media-breakpoint-down(lg) {
+    width: 93vw;
+  }
+  .cover {
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #a68d61;
+    z-index: 999999;
+  }
+}
+
+.button-animation {
+  padding: 12px 32px !important;
+  height: 54px !important;
+  overflow: hidden !important;
+  gap: 12px;
+  text-align: center;
+  border: 1px solid #a68d61;
+  position: relative;
+  color: #a68d61;
+  background: transparent;
+  &:hover{
+    border: 1px solid #a68d61;
+    height: 100%;
+    color: #a68d61;
+    background: white;
+  }
+  span{
+    align-self: center;
+  }
+}
+
+
+
+
